--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "browserify-incremental": "^3.0.1",
     "classnames": "~> 2.2.3",
     "react-select": "~> 1.0.0-beta8",
-    "react-modal": "~> 0.6.1"
+    "react-modal": "~> 0.6.1",
+    "lodash": ">= 4.3.0",
+    "react-immutable-render-mixin": "~> 0.9.2",
+    "immutable": "~> 3.7.6"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
