--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "react-dom": "~> 0.14.7",
     "browserify": "~> 13.0.0",
     "browserify-incremental": "^3.0.1",
+    "seamless-immutable": "~> 6.0.1",
+    "immutable": "~> 3.8.1",
     "classnames": "~> 2.2.3",
     "react-select": "~> 1.0.0-beta8",
-    "react-modal": "~> 0.6.1"
+    "react-modal": "~> 0.6.1",
+    "underscore": ">= 1.8.3",
+    "jquery": ">= 2.1.1",
+    "react-immutable-render-mixin": "~> 0.9.2"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
