--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-select": "~> 1.0.0-beta8",
     "react-modal": "~> 0.6.1",
     "underscore": ">= 1.8.3",
-    "jquery": ">= 2.1.1"
+    "jquery": ">= 2.1.1",
+    "react-immutable-render-mixin": "~> 0.9.2",
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
