--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-modal": "~> 0.6.1",
     "underscore": ">= 1.8.3",
     "jquery": ">= 2.1.1",
-    "react-immutable-render-mixin": "~> 0.9.2",
+    "react-immutable-render-mixin": "~> 0.9.2"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
