--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^7.2.0",
     "react": "~> 0.14.7",
     "react-dom": "~> 0.14.7",
+    "react-modal": "~> 1.2.1",
     "browserify": "~> 13.0.0",
     "browserify-incremental": "^3.0.1",
     "seamless-immutable": "~> 6.0.1",
