--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -14,6 +14,8 @@ Style/CollectionMethods:
     find: detect
     find_all: select
     reduce: inject
+Style/AlignHash:
+  Enabled: false
 Style/DotPosition:
   Description: Checks the position of the dot in multi-line method calls.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-multi-line-chains
